--- a/index.html
+++ b/index.html
@@ -71,4 +71,17 @@ body {
 <body>
 
 <div class="form-container">
-    <form action="#" method
+    <form action="#" method="POST" class="form-wrap">
+        <h2>Forgot Password</h2>
+        <div class="form-box">
+            <input type="email" placeholder="Enter Email" /><br><br>
+<input type="checkbox">Forget pass.
+        </div>
+        <div class="form-submit">
+            <input type="submit" value="Send" />
+        </div>
+    </form>
+</div>
+
+</body>
+</html>
