--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
 <input type="checkbox">Forget pass.
         </div>
         <div class="form-submit">
-            <input type="submit" value="Send" />
+            <input type="button" value="Send" />
         </div>
     </form>
 </div>
