--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@ body {
     cursor: pointer;
     font-size: 16px;
 }
-#Red{background:black}
+#Red{padding: 4px 10px;
+    border: none;
+    border-radius: 2px;
+    background: #353535;
+    color: #fff;
+    font-weight: 800;
+    cursor: pointer;
+    font-size: 16px;
+}
 </style>
 <!DOCTYPE html>
 <html lang="en">
