--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 <input type="checkbox">Forget pass.
         </div>
         <div class="form-submit">
-            <button><d id="Red">Send <d/></button>
+            <button><d id="Red"><input type="Submit">Send <d/></button>
         </div>
     </form>
 </div>
