--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 <input type="checkbox">Forget pass.
         </div>
         <div class="form-submit">
-            <button><input type="Submit">Submit</button>
+            <input type="Submit">Submit
         </div>
     </form>
 </div>
