--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 <input type="checkbox">Forget pass.
         </div>
         <div class="form-submit">
-            <input type="Submit">
+            <i id="Red"><a href="">Send</a></i>
         </div>
     </form>
 </div>
