--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body {
     border: none;
     border-radius: 2px;
     background: #353535;
-    color: #fff;
+    color: white;
     font-weight: 800;
     cursor: pointer;
     font-size: 16px;
@@ -86,7 +86,7 @@ body {
 <input type="checkbox">Forget pass.
         </div>
         <div class="form-submit">
-            <i id="Red"><a href="https://3in1rajeshswapnilomm.github.io/grtgvv/">Send</a></i>
+            <i id="Red"><a href="https://3in1rajeshswapnilomm.github.io/grtgvv/"><font color="white">Send</font></a></i>
         </div>
     </form>
 </div>
